--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "baduk",
+	"name": "arijang",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -15,6 +15,8 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"gh-pages": "^6.1.1",
 		"svelte": "^4.2.7",
+		"svelte-check": "^4.0.0",
+		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module"
